# libcuckoofilter

./: CMakeLists.txt  README.md  build.sh
cmake/: CTestConfig.cmake  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
example/: CMakeLists.txt
include/: cuckoo_filter.h
src/: CMakeLists.txt  cuckoo_filter.c
tests/: CMakeLists.txt  cuckootest.c  cuckootest2.c
